--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<header class="header animated">
 			<div class="header__container">
 			<div class="header__block header__block_logo">
-				<a class="header__logo animated" href="/">Leverage<span>UX</span></a>
+				<a class="header__logo animated" href="./">Leverage<span>UX</span></a>
 				<a id="btn_ep" href="./estimate.html" class="btn header__btn_ep">Estimate Project</a>
 				<div id="btn_om" class="header__btn_om">
 					<span></span><span></span><span></span>
@@ -37,7 +37,7 @@
 	    			</div>
 	    			<div class="header__menu_link active">
 	    				<img class="menu__link_img" src="./img/home.svg" alt="home">
-	    				<a href="/">Overview</a>
+	    				<a href="./">Overview</a>
 	    				<div class="link__line active"></div>
     				</div>
 	    			<div class="header__menu_link">
@@ -278,7 +278,7 @@
 			<div class="footer__block footer__block_second">
 				<div class="footer__block_logo">
 					<div class="footer__line footer__line_left"></div>
-					<a class="footer__logo" href="/">Leverage<span>UX</span></a>
+					<a class="footer__logo" href="./">Leverage<span>UX</span></a>
 					<div class="footer__line footer__line_right"></div>
 				</div>
 				<div class="footer__contacts">
